samples/_failures_safe/1761535572_ccac2d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7f72283c.c: In function ‘main’:
./samples/SAFE/__tmp_7f72283c.c:149:5: error: expected expression at end of input
  149 |     if (strcmp(input,
      |     ^~
./samples/SAFE/__tmp_7f72283c.c:149:5: error: expected declaration or statement at end of input
